--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,243 +1,7 @@
 .product
   .product__head
     .head_icon
-      = image_tag "logo/logo.png"
-  .product_out
-    .product_wide
-      .product_box__img
-        .product_box__img__exhibition
-          <b>出品画像</b>
-          .required
-            <b>必須</b>
-        .product_box__img__comennt
-          最大10枚までアップロードできます
-        .product_box__img__box
-          .product_box__img__boxzise
-            %input.product_box__img__boxzise{:accept => "image/png,image/jpeg", :autocomplete => "off", :multiple => "", :style => "display:none", :tabindex => "-1", :type => "file"}/
-            .product_box__img__icon
-              .fas.fa-camera
-            .product_box__img__message
-              ドラッグアンドドロップ
-            .product_box__img__message
-              またはクリックしてファイルをアップロード
-
-  .product_name
-    .product_name__wide
-      .product_name_box__img
-        .product_name_box__exhibition
-          <b>商品名</b>
-          .required
-            <b>必須</b>
-        .product_box__comennt
-          %input{:autocomplete => "off", :name => "name", :placeholder => "40文字まで", :type => "text", :value => ""}/
-        .product_name_box__description
-          <b>商品の説明</b>
-          .required
-            <b>必須</b>
-        .product_box__description
-          %textarea.style_textarea__24aZZ.common_fontFamily__3-3Si.style_error__2YRxX.style_fluid__10CPG{:name => "description", :placeholder => "商品の説明（必須 1,000文字以内）\n（色、素材、重さ、定価、注意点など）\n\n例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。\n          ", :rows => "7", :style => "margin-top: 16px; margin-bottom: 0px; height: 134px;"}
-        .product_box__description__max
-          %span 0/1000(仮)
-        .style_formerror
-          入力してください（仮）
-
-  .details
-    .details__wide
-      .details_name
-        .details_name__title
-          <b>商品の詳細</b>
-        .form
-          = form_for [@product] do |f|
-            .listing-product-detail__category
-              = f.label 'カテゴリー', class: 'listing-default__label'
-              %span.listing-default--require 必須
-              .listing-select-wrapper
-                .listing-select-wrapper__box
-                  = f.select :category, @category_parent_array, {},  {class: 'listing-select-wrapper__box--select', id: 'parent_category' } 
-        .state
-          <b>サイズ</b>
-          .required
-            <b>必須</b>
-        .size
-          .sizes_box
-            %select{:name => "sizesId"}
-              %option{"aria-selected" => "false", :label => "レディース", :value => "1"} レディース
-              %option{"aria-selected" => "false", :label => "メンズ", :value => "2"} メンズ
-              %option{"aria-selected" => "false", :label => "ベビー・キッズ", :value => "3"} ベビー・キッズ
-              %option{"aria-selected" => "false", :label => "インテリア・住まい・小物", :value => "4"} インテリア・住まい・小物
-              %option{"aria-selected" => "false", :label => "本・音楽・ゲーム", :value => "5"} 本・音楽・ゲーム
-              %option{"aria-selected" => "false", :label => "おもちゃ・ホビー・グッズ", :value => "1328"} おもちゃ・ホビー・グッズ
-              %option{"aria-selected" => "false", :label => "コスメ・香水・美容", :value => "6"} コスメ・香水・美容
-              %option{"aria-selected" => "false", :label => "家電・スマホ・カメラ", :value => "7"} 家電・スマホ・カメラ
-              %option{"aria-selected" => "false", :label => "スポーツ・レジャー", :value => "8"} スポーツ・レジャー
-              %option{"aria-selected" => "false", :label => "ハンドメイド", :value => "9"} ハンドメイド
-              %option{"aria-selected" => "false", :label => "チケット", :value => "1027"} チケット
-              %option{"aria-selected" => "false", :label => "自動車・オートバイ", :value => "1318"} 自動車・オートバイ
-              %option{"aria-selected" => "false", :label => "その他", :value => "10"} その他
-            %svg{"aria-hidden" => "true", :fill => "#888888", "fill-rule" => "evenodd", :height => "24", :viewbox => "0 0 24 24", :width => "24"}
-              %path{:d => "M12,15.66a1.73,1.73,0,0,1-1.2-.49L5.21,9.54a.7.7,0,0,1,1-1l5.62,5.62c.15.15.27.15.41,0L17.8,8.6a.71.71,0,0,1,1,0,.69.69,0,0,1,0,1l-5.57,5.58A1.71,1.71,0,0,1,12,15.66Z"}
-        .style_formerror
-          選択してください（仮）
-
-        .brand
-          <b>ブランド</b>
-          .any
-            <b>任意</b>
-        .brand_box
-          %input{:autocomplete => "off", :name => "name", :placeholder => "例) シャネル", :type => "text", :value => ""}/
-        
-        .state
-          <b>商品の状態</b>
-          .required
-            <b>必須</b>
-        .status
-          .status_box
-            %select{:name => "itemstatus"}
-              %option{"aria-selected" => "true", :label => "選択してください", :selected => "", :value => ""} 選択してください
-              %option{"aria-selected" => "false", :label => "新品、未使用", :value => "1"} 新品、未使用
-              %option{"aria-selected" => "false", :label => "未使用に近い", :value => "2"} 未使用に近い
-              %option{"aria-selected" => "false", :label => "目立った傷や汚れなし", :value => "3"} 目立った傷や汚れなし
-              %option{"aria-selected" => "false", :label => "やや傷や汚れあり", :value => "4"} やや傷や汚れあり
-              %option{"aria-selected" => "false", :label => "傷や汚れあり", :value => "5"} 傷や汚れあり
-              %option{"aria-selected" => "false", :label => "全体的に状態が悪い", :value => "6"} 全体的に状態が悪い
-            %svg{"aria-hidden" => "true", :fill => "#888888", "fill-rule" => "evenodd", :height => "24", :viewbox => "0 0 24 24", :width => "24"}
-              %path{:d => "M12,15.66a1.73,1.73,0,0,1-1.2-.49L5.21,9.54a.7.7,0,0,1,1-1l5.62,5.62c.15.15.27.15.41,0L17.8,8.6a.71.71,0,0,1,1,0,.69.69,0,0,1,0,1l-5.57,5.58A1.71,1.71,0,0,1,12,15.66Z"}
-        .style_formerror
-          選択してください（仮）
-
-
-  .delivery
-    .delivery__wide
-      .delivery_name
-        .delivery_name__title
-          <b>配送について</b>
-          .help
-            = link_to('利用規約', {})
-          .delivery_name__exhibition
-            <b>配送料の負担</b>
-            .required
-              <b>必須</b>
-          .delivery_charge
-            .delivery_charge_box
-              %select{:name => "delivery"}
-                %option{"aria-selected" => "true", :label => "選択してください", :selected => "", :value => ""} 選択してください
-                %option{"aria-selected" => "false", :label => "送料込み(出品者負担)", :value => "2"} 送料込み(出品者負担)
-                %option{"aria-selected" => "false", :label => "着払い(購入者負担)", :value => "1"} 着払い(購入者負担)
-              %svg{"aria-hidden" => "true", :fill => "#888888", "fill-rule" => "evenodd", :height => "24", :viewbox => "0 0 24 24", :width => "24"}
-                %path{:d => "M12,15.66a1.73,1.73,0,0,1-1.2-.49L5.21,9.54a.7.7,0,0,1,1-1l5.62,5.62c.15.15.27.15.41,0L17.8,8.6a.71.71,0,0,1,1,0,.69.69,0,0,1,0,1l-5.57,5.58A1.71,1.71,0,0,1,12,15.66Z"}
-          .style_formerror
-            選択してください（仮）
-
-          .delivery_area__exhibition
-            <b>発送元の地域</b>
-            .required
-              <b>必須</b>
-          .delivery_areas
-            .delivery_areas_box
-              %select{:name => "areas"}
-                %option{:selected => "selected", :value => ""} 選択してください
-                %option{:value => "1"} 北海道
-                %option{:value => "2"} 青森県
-                %option{:value => "3"} 岩手県
-                %option{:value => "4"} 宮城県
-                %option{:value => "5"} 秋田県
-                %option{:value => "6"} 山形県
-                %option{:value => "7"} 福島県
-                %option{:value => "8"} 茨城県
-                %option{:value => "9"} 栃木県
-                %option{:value => "10"} 群馬県
-                %option{:value => "11"} 埼玉県
-                %option{:value => "12"} 千葉県
-                %option{:value => "13"} 東京都
-                %option{:value => "14"} 神奈川県
-                %option{:value => "15"} 新潟県
-                %option{:value => "16"} 富山県
-                %option{:value => "17"} 石川県
-                %option{:value => "18"} 福井県
-                %option{:value => "19"} 山梨県
-                %option{:value => "20"} 長野県
-                %option{:value => "21"} 岐阜県
-                %option{:value => "22"} 静岡県
-                %option{:value => "23"} 愛知県
-                %option{:value => "24"} 三重県
-                %option{:value => "25"} 滋賀県
-                %option{:value => "26"} 京都府
-                %option{:value => "27"} 大阪府
-                %option{:value => "28"} 兵庫県
-                %option{:value => "29"} 奈良県
-                %option{:value => "30"} 和歌山県
-                %option{:value => "31"} 鳥取県
-                %option{:value => "32"} 島根県
-                %option{:value => "33"} 岡山県
-                %option{:value => "34"} 広島県
-                %option{:value => "35"} 山口県
-                %option{:value => "36"} 徳島県
-                %option{:value => "37"} 香川県
-                %option{:value => "38"} 愛媛県
-                %option{:value => "39"} 高知県
-                %option{:value => "40"} 福岡県
-                %option{:value => "41"} 佐賀県
-                %option{:value => "42"} 長崎県
-                %option{:value => "43"} 熊本県
-                %option{:value => "44"} 大分県
-                %option{:value => "45"} 宮崎県
-                %option{:value => "46"} 鹿児島県
-                %option{:value => "47"} 沖縄県
-                %option{:value => "48"} その他
-              %svg{"aria-hidden" => "true", :fill => "#888888", "fill-rule" => "evenodd", :height => "24", :viewbox => "0 0 24 24", :width => "24"}
-                %path{:d => "M12,15.66a1.73,1.73,0,0,1-1.2-.49L5.21,9.54a.7.7,0,0,1,1-1l5.62,5.62c.15.15.27.15.41,0L17.8,8.6a.71.71,0,0,1,1,0,.69.69,0,0,1,0,1l-5.57,5.58A1.71,1.71,0,0,1,12,15.66Z"}
-          .style_formerror
-            選択してください（仮）
-
-          .delivery_area__exhibition
-            <b>配送までの日数</b>
-            .required
-              <b>必須</b>
-          .delivery_areas
-            .delivery_areas_box
-              %select{:name => "days"}
-                %option{"aria-selected" => "true", :label => "選択してください", :selected => "", :value => ""} 選択してください
-                %option{"aria-selected" => "false", :label => "1~2日で発送", :value => "1"} 1~2日で発送
-                %option{"aria-selected" => "false", :label => "2~3日で発送", :value => "2"} 2~3日で発送
-                %option{"aria-selected" => "false", :label => "4~7日で発送", :value => "3"} 4~7日で発送
-              %svg{"aria-hidden" => "true", :fill => "#888888", "fill-rule" => "evenodd", :height => "24", :viewbox => "0 0 24 24", :width => "24"}
-                %path{:d => "M12,15.66a1.73,1.73,0,0,1-1.2-.49L5.21,9.54a.7.7,0,0,1,1-1l5.62,5.62c.15.15.27.15.41,0L17.8,8.6a.71.71,0,0,1,1,0,.69.69,0,0,1,0,1l-5.57,5.58A1.71,1.71,0,0,1,12,15.66Z"}
-          .style_formerror
-            選択してください（仮）
-  .value
-    .value__wide
-      .value__name
-        .value_name__title
-          <b>価格 (¥300~9,999,999)</b>
-          .help
-            = link_to('利用規約', {})
-        .selling_price
-          <b>販売価格</b>
-          .required
-            <b>必須</b>
-          .mark
-            ¥
-          .value_box
-            %input{:autocomplete => "off", :name => "price", :placeholder => "0", :type => "number", :value => ""}/
-            .value_box__input
-          .value_note
-            300以上9999999以下で入力してください
-        .commission
-          .commission__title
-            販売手数料
-          .commission__calculation
-            ー
-        .sale
-          .sale__title
-            販売利益
-          .sale__calculation
-            ー
-        .exhibition
-          %button{:tabindex => "0", :type => "submit"} <b>出品する</b>
-        .draft
-          %button{:tabindex => "0", :type => "button"} <b>下書きに保存</b>
-        .back
-          = link_to('もどる', {:href => "/jp/"})
-        .prohibited
-          禁止されている行為および出品物を必ずご確認ください。偽ブランド品や盗品物などの販売は犯罪であり、法律により処罰される可能性があります。 また、出品をもちまして加盟店規約に同意したことになります。
-
+      = link_to root_path do
+        = image_tag "logo/logo.png"
+  .product__form
+    = render "form", { product: @product }
